<resources>
    <string name="app_name">Q02</string>


    <string name="action_settings">Settings</string>

    <string name="new_game">Νέο Παιχνίδι</string>
    <string name="options">Επιλογές</string>
    <string name="rules">Κανόνες</string>
    <string name="go_on">Συνέχεια Παιχνιδιού</string>
    <string name="rules_theplay"> Χωρίστε την παρέα σας σε 2 με 4 ομάδες. Επιλέξτε ονόματα και χρώματα για τις ομάδες σας. Το παιχνίδι ξεκινάει και παίζει η πρώτη ομάδα. Δώστε την συσκευή σε έναν παίχτη που ανήκει σε αντίπαλη ομάδα, ο παίχτης πατά το εικονίδιο του ζαριού και περιμένει να εμφανιστεί το αποτέλεσμα. Υπάρχουν δύο περιπτώσεις αποτελέσματος ζαριού, είτε εμφανίζονται 2 κουμπιά κατηγοριών είτε ένα κουμπί διαμαντιού. Στην πρώτη περίπτωση ο παίχτης που κρατάει την συσκευή ανακοινώνει στην ομάδα που παίζει τις δύο κατηγορίες που έτυχε. Η ομάδα που παίζει αποφασίζει ποια από τις δυο κατηγορίες θέλει να παίξει και ανακοινώνει το αποτέλεσμα στον παίχτη που κρατάει την συσκευή ώστε να πατήσει το αντίστοιχο κουμπί. Στην δεύτερη περίπτωση η παίχτης που κρατά τη συσκευή ανακοινώνει στην ομάδα που παίζει ότι έτυχε ερώτηση για διαμαντάκι και την κατηγορία στην οποία ανήκει αυτό και πατάει το κουμπί διαμάντι.\n\n
    Ο παίχτης που κρατάει τη συσκευή ρωτάει την ερώτηση που εμφανίζεται πάνω στην κάρτα στην ομάδα που παίζει. Η ομάδα αποφασίζει μία απάντηση και την ανακοινώνει στον παίχτη με την συσκευή. Πατώντας πάνω στην κάρτα ο παίχτης μπορεί να την περιστρέψει ώστε να δει την απάντηση (και το αντίθετο). Εάν είναι σωστή η απάντηση ο παίχτης πατάει το κουμπί με το “τικ” αλλιώς το κουμπί με το “χι”. Εάν η απάντηση είναι σωστή η ομάδα συνεχίζει να παίζει και ξαναεπιλέγει κατηγορία, εάν είναι λάθος παίζει η επόμενη ομάδα και εάν ο παίχτης που κρατάει τη συσκευή ανήκει σε αυτή πρέπει να δώσει τη συσκευή σε κάποιο αντίπαλο παίχτη. Στην περίπτωση που κάποια ομάδα απαντήσει σωστά σε ερώτηση διαμάντι τότε κερδίζει το διαμάντι για αυτή την κατηγορία.
</string>
    <string name="rules_object">Ο σκοπός του παιχνιδιού είναι να μαζέψετε και τα 6 διαμαντάκια κατηγοριών απαντώντας σε ερωτήσεις που σας θέτουν οι αντίπαλοι.</string>
    <string name="rules_endofgame">Η πρώτη ομάδα που θα συγκεντρώσει και τα 6 διαμάντια είναι η νικήτρια ομάδα.</string>
    <string name="rules_general">Το Genius είναι ένα επιτραπέζιο παιχνίδι γενικών γνώσεων για 2 έως 4 ομάδες. Χωρίστε την παρέα σας σε ομάδες και ανακαλύψτε ποια ομάδα είναι ικανή να κερδίσει τον τίτλο του Genius!</string>

    <string name="back">Πίσω</string>
    <string name="NumofTeams">Αριθμός Ομάδων</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="next">επόμενο</string>

    <string name="team1">Ομάδα 1</string>
    <string name="team2">Ομάδα 2</string>
    <string name="team3">Ομάδα 3</string>
    <string name="team4">Ομάδα 4</string>
    <string name="team5">Ομάδα 5</string>
    <string name="team6">Ομάδα 6</string>

    <string name="rithmiseis_omadas">Ρυθμίσεις Ομάδων</string>
    <string name="title_activity_rules">Rules</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_choose_num_of_players">ChooseNumOfPlayers</string>
    <string name="title_activity_init_teams">InitTeams</string>
    <string name="title_activity_main_game">MainGame</string>
    <string name="title_activity_question_screen">QuestionScreen</string>
    <string name="title_activity_winner">Winner</string>
    <string name="title_activity_saved_game_status">SavedGameStatus</string>
    <string name="title_activity_add_question">addQuestion</string>
    <string name="title_activity_report">report</string>

    <string name="title_activity_saved_games">SavedGames</string>
    <string name="title_activity_continue_screen">ContinueScreen</string>
    <string name="title_activity_terms">Terms</string>

</resources>
